# gxde-daemon

./: .gitignore  LICENSE  Plugin Conducts.md  README.md  build-deb
dbus/: com.deepin.license.conf
dbus/dbus-services/: com.deepin.license.service  com.gxde.corneredge.service
dbus/services/: com.gxde.corneredge.service  com.gxde.daemon.ai.speaker.service  com.gxde.daemon.ai.translate.service  com.gxde.daemon.autostart.manager.slimy.service  com.gxde.daemon.corneredge.service  com.gxde.daemon.personalization.service  com.gxde.daemon.system.info.service  com.gxde.daemon.system.update.service
dbus/system-services/: com.deepin.license.service  com.gxde.daemon.power.service
dbus/system.d/: com.gxde.daemon.power.conf
debian/: changelog  control  install  rules
gxde-daemon/: gxde-ai.py  gxde-autostart-manager-slimy.py  gxde-corneredge-daemon.py  gxde-personalization.py  gxde-power.py  gxde-system-info.py  gxde-system.py
gxde-daemon/utils/: ConfigManager.py
gxde-dbus-daemon/: gxde-fake-license.py
k9/disable/slimy/: gxde-globalmenu-service.slimy  gxde-top-panel.slimy  orca.slimy  plank.slimy  x11vnc.slimy
k9/edging/: gxde-daemon-manager.edging  top.gxde.daemon.edging
k9/system/slimy/: polkitd.slimy
libexec/gxde-daemon/: gxde-dbus-launch.sh  gxde-root-launch.sh
manifests/: daemon-manager.json  dock.json  gtk-theme-inject.json
misc/applications/: gxde-multitaskingview.desktop
misc/autostart/: gxde-daemon-manager.desktop
misc/polkit-1/actions/: org.gxde.gxde-daemon.gxde-root-launch.policy  top.gxde.gxde-daemon.gxde-dbus-launch.policy
misc/wayland-sessions/: gxde-wayland.desktop
plugins/daemon-manager/: .clang-format  CMakeLists.txt
plugins/daemon-manager/data/: gxde-daemon-manager.service  top.gxde.daemon.manager.service
plugins/daemon-manager/src/: main.cc
plugins/daemon-manager/src/manager/: manager.cc  manager.h
plugins/daemon-manager/src/manifest/: manifest.cc  manifest.h
plugins/dock/: CMakeLists.txt
plugins/dock/data/: top.gxde.daemon.dock.service  top.gxde.dock.service
plugins/dock/src/: dock_types.h  main.cc
plugins/dock/src/app_entries/: app_entries.cc  app_entries.h
plugins/dock/src/app_entry/: app_entry.cc  app_entry.h
plugins/dock/src/app_info/: app_info.cc  app_info.h
plugins/dock/src/backend/: backend_factory.cc  window_backend.h
plugins/dock/src/backend/wayland_backend/: wayland_backend.cc  wayland_backend.h
plugins/dock/src/backend/x11_backend/: x11_backend.cc  x11_backend.h
plugins/dock/src/dock_manager/: dock_manager.cc  dock_manager.h
plugins/dock/src/settings/: settings.cc  settings.h
plugins/dock/src/window_identify/: window_identify.cc  window_identify.h
plugins/gtk-theme-inject/: CMakeLists.txt
plugins/gtk-theme-inject/src/: main.cc
src/global/: path.py
src/setting/: dbus.py  dtk.py
systemd/system/: com.gxde.daemon.power.service
